Add Base. Add check on registration.

--- a/Views/Home/StartView.cshtml
+++ b/Views/Home/StartView.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "StartView";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>StartView</h2>
+<h2>Пожалуйста, введите промо-код.</h2>
 <form method="post">
     @Html.TextBoxFor(model=>model.Code) <input type="submit" value="Отправить" />
 </form>
