--- a/Views/Home/ThanksView.cshtml
+++ b/Views/Home/ThanksView.cshtml
@@ -6,3 +6,6 @@
 
 <h2>Здравствуйте @ViewBag.NameSurname! Вам выслан промо-код по электронному адресу:@ViewBag.Email. Проверьте свой почтовый ящик!</h2>
 
+<p>Ваш промо-код: @ViewBag.Code .</p> <br>
+<p>Можете использовать его в нашем магазине https://www.asos.com/</p>
+
