--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                     <li><a asp-area="" asp-controller="Home" asp-action="PersonData">Получить промо-код!</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="RecalPromo">Вспомнить промо-код!</a></li>
                 </ul>
             </div>
         </div>
