--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Start" class="navbar-brand">VladPromoCodeWebApp</a>
+                <a asp-area="" asp-controller="Home" asp-action="Autentification" class="navbar-brand">VladPromoCodeWebApp</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -35,6 +35,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                     <li><a asp-area="" asp-controller="Home" asp-action="PersonData">Получить промо-код!</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="RecalPromo">Вспомнить промо-код!</a></li>
+                    
+                    <li><a asp-area="" asp-controller="Home" asp-action="Exit">Выйти</a></li>
                 </ul>
             </div>
         </div>
